--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,250 @@
-/* font-weight */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+/**
+ * ----------------------------------------
+ * animation scale
+ * ----------------------------------------
+ */
+.scale {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+}
+
+.scale:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
+/**
+ * ----------------------------------------
+ * animation viewGallery
+ * ----------------------------------------
+ */
+.viewGallery {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+
+.viewGallery:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  z-index: 100;
+}
+
+/**
+ * ----------------------------------------
+ * Gradient
+ * ----------------------------------------
+ */
+.gradiente {
+  background: black;
+  background: -webkit-gradient(linear, left top, right top, from(black), color-stop(65%, #f10000), to(red));
+  background: linear-gradient(90deg, black 0%, #f10000 65%, red 100%);
+}
+
+/**
+ * ----------------------------------------
+ * animation tracking-in-contract
+ * ----------------------------------------
+ */
+@-webkit-keyframes tracking-in-contract {
+  0% {
+    letter-spacing: 1em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    letter-spacing: normal;
+    opacity: 1;
+  }
+}
+@keyframes tracking-in-contract {
+  0% {
+    letter-spacing: 1em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    letter-spacing: normal;
+    opacity: 1;
+  }
+}
+
+.tracking-in-contract {
+  -webkit-animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+          animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+}
+
+/**
+ * ----------------------------------------
+ * animation rotate-90
+ * ----------------------------------------
+ */
+@-webkit-keyframes rotate-90 {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+}
+@keyframes rotate-90 {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg);
+  }
+}
+
+.rotate-90 {
+  -webkit-animation: rotate-90 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+          animation: rotate-90 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+.kenburns-bottom {
+  -webkit-animation: kenburns-bottom 5s ease-out both;
+          animation: kenburns-bottom 5s ease-out both;
+}
+
+/**
+ * ----------------------------------------
+ * animation kenburns-bottom
+ * ----------------------------------------
+ */
+@-webkit-keyframes kenburns-bottom {
+  0% {
+    -webkit-transform: scale(1) translateY(0);
+            transform: scale(1) translateY(0);
+    -webkit-transform-origin: 50% 84%;
+            transform-origin: 50% 84%;
+  }
+  100% {
+    -webkit-transform: scale(1.25) translateY(15px);
+            transform: scale(1.25) translateY(15px);
+    -webkit-transform-origin: bottom;
+            transform-origin: bottom;
+  }
+}
+
+@keyframes kenburns-bottom {
+  0% {
+    -webkit-transform: scale(1) translateY(0);
+            transform: scale(1) translateY(0);
+    -webkit-transform-origin: 50% 84%;
+            transform-origin: 50% 84%;
+  }
+  100% {
+    -webkit-transform: scale(1.25) translateY(15px);
+            transform: scale(1.25) translateY(15px);
+    -webkit-transform-origin: bottom;
+            transform-origin: bottom;
+  }
+}
+
+/**
+ * ----------------------------------------
+ * Custom Reset
+ * ----------------------------------------
+ */
 * {
   margin: 0;
   padding: 0;
 }
 
-:root{
-  --main-bg-color: #13151e;
-  --main-text-shadow-color: #D6222B;
-  --main-font-color: #fafafa;
-
-  /* color palette */
-  --color-coral: #D91A2A;
-  --color-pink: #BF1B39;
-  --color-dark: #a00000;
-  --color-gris: #a70000;
+/*** Remove focus for button, input, select, a ***/
+button:focus, button:focus-visible, input:focus, input:focus-visible, select:focus, select:focus-visible, a:focus, a:focus-visible {
+  outline: none !important;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
 }
 
+/*** Hide Arrows From Input Number ***/
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+/**
+ * ----------------------------------------
+ * Boddy - Style
+ * ----------------------------------------
+ */
 body {
-  color: var(--main-font-color);
+  color: #FAFAFA;
   font-style: normal;
   font-weight: 300;
   font-size: 1rem;
   font-family: "Roboto", sans-serif;
-  background-color: var(--main-bg-color);
+  background-color: #13151e;
+  scrollbar-width: thin;
+  scrollbar-color: #BF1B39 #a00000;
 }
 
-/**** COLORS ****/
-.bg-pink {
-  background-color: var(--color-cora);
+body::-webkit-scrollbar {
+  width: 8px;
 }
 
+body::-webkit-scrollbar-track {
+  background: #13151e;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #BF1B39;
+  border-radius: 6px;
+  border: 3px solid #a00000;
+}
+
+/**
+ * ----------------------------------------
+ * Colors class
+ * ----------------------------------------
+ */
 .colorPink {
-  color: var(--color-pink)
+  color: #a00000;
 }
 
-.bg-purple {
-  background-color: var(--color-dark)
+.colorWhite {
+  color: #FAFAFA;
 }
 
-.bg-black {
-  background-color: black;
-}
-
-.colorPurple {
-  color: var(--color-dark)
-}
-
-.bg-gray {
-  background-color: var(--color-gris)
-}
-
-.border-purple {
-  border-top: var(--main-text-shadow-color) 3px solid;
-  border-bottom: var(--main-text-shadow-color) 3px solid;
+/**
+ * ----------------------------------------
+ * Background colors
+ * ----------------------------------------
+ */
+.bg-red {
+  background-color: #a00000;
 }
 
 .bg-black {
   background-color: #13151e;
 }
 
-
+/**
+ * ----------------------------------------
+ * FONTS - generate fonts class 
+ * ----------------------------------------
+ */
 /**** FONTS ROBOTO *****/
 .roboto-thin {
   font-family: "Roboto", sans-serif;
@@ -92,42 +276,95 @@ body {
   font-weight: 900;
 }
 
-/**** BANNER ****/
+/**
+ * ----------------------------------------
+ * CUSTOM NAVBAR - Style
+ * ----------------------------------------
+ */
+/* Change background color */
+.navbar-custom {
+  background-color: #13151e;
+  color: #FAFAFA;
+  font-family: "Roboto", sans-serif;
+  cursor: url(../assets/icons/cursor.png), auto;
+}
+
+/* Change the brand and text color */
+.navbar-custom__brand.navbar-brand, .navbar-custom__brand .navbar-text {
+  color: #FAFAFA;
+  cursor: url(../assets/icons/cursor.png), auto;
+}
+
+/* Change the link color */
+.navbar-custom__link .navbar-nav .nav-link {
+  color: #FAFAFA;
+  font-size: 1.2rem;
+}
+
+/* Change the color of active or hovered links */
+.navbar-custom__link--colorPink .nav-item.active .nav-link, .navbar-custom__link--colorPink .nav-item:focus .nav-link, .navbar-custom__link--colorPink .nav-item:hover .nav-link {
+  color: #BF1B39;
+  cursor: url(../assets/icons/cursor.png), auto;
+}
+
+/* Change the color of toogler */
+.navbar-custom__toogler.navbar-toggler i {
+  color: #BF1B39;
+}
+
+/**
+ * ----------------------------------------
+ * Banner - Style
+ * ----------------------------------------
+ */
 .banner {
   position: relative;
-  background-color: #080808;
+  background-color: #13151e;
+  color: #D91A2A;
   width: 100%;
   overflow: hidden;
 }
 
 .banner--img {
-  color: var(--color-coral);
-  height: 15%;
-  min-height: 10rem;
-  margin-bottom: 5rem;
+  height: 20vh;
+  min-height: 18rem;
 }
 
-.banner--imgBig {
-  height: 80vh;
+.banner--home {
+  height: 100vh;
   min-height: 25rem;
 }
 
-.banner__imgBig.embed-responsive {
+.banner__img {
   position: absolute;
-  top: 50%;
-  left: 50%;
   min-width: 100%;
   min-height: 100%;
   width: auto;
   height: auto;
   z-index: 0;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-          transform: translateX(-50%) translateY(-50%);
 }
 
 .banner__container {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  text-align: center;
   z-index: 2;
+}
+
+.banner__container span {
+  font-size: 3.8rem;
 }
 
 .banner__overlay {
@@ -153,63 +390,14 @@ body {
   opacity: 0.7;
 }
 
-/****** NAVBAR  ************/
-/* Change background color */
-.navbar-custom {
-  background-color: #080808;
-  color: #FAFAFA;
-  font-family: "Roboto", sans-serif;
-}
-
-/* Change the brand and text color */
-.navbar-custom__brand.navbar-brand, .navbar-custom__brand .navbar-text {
-  color: #FAFAFA;
-}
-
-/* Change the link color */
-.navbar-custom__link .navbar-nav .nav-link {
-  color: #FAFAFA;
-}
-
-/* Change the color of active or hovered links */
-.navbar-custom__link--colorPink .nav-item.active .nav-link, .navbar-custom__link--colorPink .nav-item:focus .nav-link, .navbar-custom__link--colorPink .nav-item:hover .nav-link {
-  color: var(--main-text-shadow-color);
-}
-
-/* Change the color of toogler */
-.navbar-custom__toogler.navbar-toggler i {
-  color: var(--main-text-shadow-color);
-}
-
-
-/***** MINI BANNER MOBILE ******/
-.miniBanner {
-  color: #FAFAFA;
-  text-decoration: none;
-  text-align: center;
-  margin: 0 1.5em;
-}
-
-.miniBanner--gradient {
-  background: rgb(0,0,0);
-  background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(241,0,0,1) 65%, rgba(255,0,0,1) 100%);
-}
-
-.miniBanner--border {
-  border-radius: 0 100px 0 100px;
-}
-
-.miniBanner__text {
-  color: #FAFAFA;
-  font-weight: 300;
-  font-size: 1.3em;
-}
-
-/*****************   BACKGROUNDS    *********************/
-
-@media all and (min-width: 360px) {
+/**
+ * ----------------------------------------
+ * BACKGROUNDS - generate bg for banners
+ * ----------------------------------------
+ */
+@media all and (min-width: 320px) {
   .backgroundBanner {
-    background-image: url("../assets/img/background_banner.png");
+    background-image: url("../assets/img/banner-bgImage-extra-small.jpg");
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
@@ -218,7 +406,7 @@ body {
 
 @media all and (min-width: 768px) {
   .backgroundBanner {
-    background-image: url("../assets/img/background_banner.png");
+    background-image: url("../assets/img/banner-bgImage-medium.jpg");
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
@@ -227,17 +415,84 @@ body {
 
 @media all and (min-width: 1024px) {
   .backgroundBanner {
-    background-image: url("../assets/img/background_banner.png");
+    background-image: url("../assets/img/banner-bgImage-large.jpg");
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
   }
 }
 
-/**** MENU ****/
+/**
+ * ----------------------------------------
+ * CardDeck - Media Query  
+ * ----------------------------------------
+ */
+/****  Prevents the carddeck from splitting into 2 lines ****/
+@media all and (max-width: 906px) {
+  #cardDeckMQ .card-deck {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #cardDeckMQ .card-deck .card {
+    min-width: 17rem;
+    max-width: 26rem;
+  }
+}
+
+/**
+ * ----------------------------------------
+ * Home - Style 
+ * ----------------------------------------
+ */
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: #080d15;
+  opacity: .3;
+}
+
+.logoHome {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+}
+
+.card-link {
+  font-size: 1.3rem;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  font-style: italic;
+  border: 2px solid #BF1B39;
+  text-align: center;
+}
+
+.card-link a {
+  text-decoration: none;
+  color: #FAFAFA;
+}
+
+.card-link a:hover {
+  color: #BF1B39;
+  border-color: #BF1B39;
+}
+
+.card-size {
+  min-width: 12rem;
+  max-width: 16rem;
+}
+
+/**
+ * ----------------------------------------
+ * Menu - Style 
+ * ----------------------------------------
+ */
 .menu {
   color: #FAFAFA;
-  background-color: #080808;
+  background-color: #13151e;
   margin-top: 2rem;
   margin-bottom: 2rem;
   text-align: center;
@@ -252,7 +507,8 @@ body {
 }
 
 .menu--size {
-  max-width: 300px;
+  min-width: 12rem;
+  max-width: 16rem;
 }
 
 .menu--scale img {
@@ -263,14 +519,18 @@ body {
 }
 
 .menu--scale img:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
   z-index: 100;
 }
 
-/***** EVENTS *****/
+/**
+ * ----------------------------------------
+ * Events - Style 
+ * ----------------------------------------
+ */
 .event {
-  background-color: #080808;
+  background-color: #13151e;
   color: #FAFAFA;
   font-size: 1.3rem;
   font-family: "Roboto", sans-serif;
@@ -287,19 +547,50 @@ body {
 }
 
 .event__date {
-  color: var(--main-text-shadow-color);
+  min-width: 15rem;
+  max-width: 20rem;
   font-size: 1.3rem;
   font-family: "Roboto", sans-serif;
   font-weight: 600;
   font-style: italic;
+  border: 2px solid #BF1B39;
+  text-align: center;
 }
 
-/******* FOOTER ******/
+.event__date a {
+  text-decoration: none;
+  color: #FAFAFA;
+}
+
+.event__date a:hover {
+  color: #BF1B39;
+  border-color: #BF1B39;
+}
+
+.event__date i {
+  padding: 0 0.2em;
+}
+
+/**
+ * ----------------------------------------
+ * Gallery 
+ * ----------------------------------------
+ */
+/**** Rotate the close button of the modal ****/
+.rt90 i:hover {
+  -webkit-animation: rotate-90 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+          animation: rotate-90 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+/**
+ * ----------------------------------------
+ * Footer - Style
+ * ----------------------------------------
+ */
 .footer {
   font-family: "Roboto", sans-serif;
-  background-color: var(--color-dark);
+  background-color: #13151e;
   color: #FAFAFA;
-  margin-top: 0rem;
 }
 
 .footer p {
@@ -308,11 +599,11 @@ body {
 }
 
 .footer__schedule {
-  background-color: var(--color-dark);
+  background-color: #a00000;
 }
 
 .footer__socialMedia {
-  background-color: var(--color-dark);
+  background-color: #a00000;
   color: #FAFAFA;
 }
 
@@ -321,51 +612,75 @@ body {
 }
 
 .footer__socialMedia a:hover {
-  color: var(--main-bg-color);
+  color: #BF1B39;
 }
 
 .footer__address {
-  background-color: var(--color-dark);
+  background-color: #a00000;
   color: #FAFAFA;
   font-size: 1rem;
 }
 
+.footer__goUp {
+  background-color: #13151e;
+}
+
+.footer__goUp a {
+  color: #FAFAFA;
+}
+
+.footer__goUp a:hover {
+  color: #BF1B39;
+}
+
+.footer__goUp p {
+  font-size: 0.6rem;
+}
 
 .footer--bgDark {
-  background-color: var(--color-dark);
+  background-color: #13151e;
 }
 
 .footer--bgGray {
-  background-color: var(--color-dark);
+  background-color: #a00000;
 }
 
-/**** BUTTON ****/
+/**
+ * ----------------------------------------
+ * Button - Style
+ * ----------------------------------------
+ */
 .button {
   border: none;
   color: #FAFAFA;
-  padding: 15px 32px;
+  padding: 5px 16px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
+  font-size: 1rem;
+  margin: 2px 1px;
   cursor: pointer;
 }
 
 .button--hover:hover {
-  font-weight: 700;
-  border: 3px solid #212f42;
+  border: 2px solid #a00000;
 }
 
 .button--theme-purple {
-  background: var(--color-coral);
+  background: #BF1B39;
   border-radius: 10px 10px 10px 10px;
-  border: 3px solid transparent;
+  border: 2px solid transparent;
 }
 
-/**** CHANGE COLOR RADIO CHECK ****/
+/**
+ * ----------------------------------------
+ * Custom radio color. (Pink)
+ * ----------------------------------------
+ */
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: var(--main-text-shadow-color);
-  border-color: #1b0224;
+  background-color: #BF1B39;
+  border-color: #BF1B39;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
 }
 /*# sourceMappingURL=style.css.map */
