--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,19 @@
+/**
+ * ----------------------------------------
+ * Font Family
+ * ----------------------------------------
+ */
+/**
+ * ----------------------------------------
+ * Font-Weight
+ * ----------------------------------------
+ */
+/**
+ * ----------------------------------------
+ * Colors - Palette
+ * ----------------------------------------
+ */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
 /**
  * ----------------------------------------
  * animation scale
@@ -220,7 +234,7 @@ body::-webkit-scrollbar-thumb {
  * ----------------------------------------
  */
 .colorPink {
-  color: #a00000;
+  color: #BF1B39;
 }
 
 .colorWhite {
@@ -232,8 +246,8 @@ body::-webkit-scrollbar-thumb {
  * Background colors
  * ----------------------------------------
  */
-.bg-red {
-  background-color: #a00000;
+.bg-pink {
+  background-color: #BF1B39;
 }
 
 .bg-black {
