--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -41,7 +41,7 @@ $main-bg-color: #13151e;
 $main-font-color: #FAFAFA;
 $main-text-shadow-color: #D6222B;
 
-$color-pink: #BF1B39;
+$color-red: #BF1B39;
 $color-red: #D91A2A;
 $color-darkviolet: #a00000;
 $color-gris: #a70000;
