--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,24 +13,24 @@ $fonts-name: roboto;
  * ----------------------------------------
  */
 
- $font-thin: 100;
- $font-light: 300;
- $font-regular: 400;
- $font-medium: 500;
- $font-semi-bold: 600;
- $font-bold: 700;
- $font-black: 900;
- 
- $font-weight-roboto:(
-     "thin": $font-thin,     /* Roboto Only */
-     "light": $font-light,   /* Roboot Only */
-     "regular": $font-regular,
-     "medium": $font-medium,
-     "bold": $font-bold,
-     "black": $font-black
- );
- 
- 
+$font-thin: 100;
+$font-light: 300;
+$font-regular: 400;
+$font-medium: 500;
+$font-semi-bold: 600;
+$font-bold: 700;
+$font-black: 900;
+
+$font-weight-roboto:("thin": $font-thin,
+    /* Roboto Only */
+    "light": $font-light,
+    /* Roboot Only */
+    "regular": $font-regular,
+    "medium": $font-medium,
+    "bold": $font-bold,
+    "black": $font-black);
+
+
 /**
  * ----------------------------------------
  * Colors - Palette
@@ -44,4 +44,3 @@ $main-text-shadow-color: #D6222B;
 $color-red: #D91A2A;
 $color-fullred: #a00000;
 $color-gold: #dfc298;
-
