--- a/css/style.css
+++ b/css/style.css
@@ -20,16 +20,11 @@
  * ----------------------------------------
  */
 .scale {
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-transition: all 500ms ease-in-out;
-  transition: all 500ms ease-in-out;
-}
+  transform: scale(1);
+  transition: all 500ms ease-in-out; }
 
 .scale:hover {
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
-}
+  transform: scale(1.3); }
 
 /**
  * ----------------------------------------
@@ -37,17 +32,12 @@
  * ----------------------------------------
  */
 .viewGallery {
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out;
-}
+  transform: scale(1);
+  transition: all 300ms ease-in-out; }
 
 .viewGallery:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
-  z-index: 100;
-}
+  transform: scale(1.05);
+  z-index: 100; }
 
 /**
  * ----------------------------------------
@@ -56,82 +46,42 @@
  */
 .gradiente {
   background: black;
-  background: -webkit-gradient(linear, left top, right top, from(black), color-stop(65%, #f10000), to(red));
-  background: linear-gradient(90deg, black 0%, #f10000 65%, red 100%);
-}
+  background: linear-gradient(90deg, black 0%, #f10000 65%, red 100%); }
 
 /**
  * ----------------------------------------
  * animation tracking-in-contract
  * ----------------------------------------
  */
-@-webkit-keyframes tracking-in-contract {
-  0% {
-    letter-spacing: 1em;
-    opacity: 0;
-  }
-  40% {
-    opacity: 0.6;
-  }
-  100% {
-    letter-spacing: normal;
-    opacity: 1;
-  }
-}
 @keyframes tracking-in-contract {
   0% {
     letter-spacing: 1em;
-    opacity: 0;
-  }
+    opacity: 0; }
   40% {
-    opacity: 0.6;
-  }
+    opacity: 0.6; }
   100% {
     letter-spacing: normal;
-    opacity: 1;
-  }
-}
+    opacity: 1; } }
 
 .tracking-in-contract {
-  -webkit-animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) both;
-          animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) both;
-}
+  animation: tracking-in-contract 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) both; }
 
 /**
  * ----------------------------------------
  * animation rotate-90
  * ----------------------------------------
  */
-@-webkit-keyframes rotate-90 {
-  0% {
-    -webkit-transform: rotate(0);
-            transform: rotate(0);
-  }
-  100% {
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
-  }
-}
 @keyframes rotate-90 {
   0% {
-    -webkit-transform: rotate(0);
-            transform: rotate(0);
-  }
+    transform: rotate(0); }
   100% {
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
-  }
-}
+    transform: rotate(90deg); } }
 
 .rotate-90 {
-  -webkit-animation: rotate-90 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-          animation: rotate-90 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-}
+  animation: rotate-90 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
 
 .kenburns-bottom {
-  -webkit-animation: kenburns-bottom 5s ease-out both;
-          animation: kenburns-bottom 5s ease-out both;
-}
+  animation: kenburns-bottom 5s ease-out both; }
 
 /**
  * ----------------------------------------
@@ -140,33 +90,19 @@
  */
 @-webkit-keyframes kenburns-bottom {
   0% {
-    -webkit-transform: scale(1) translateY(0);
-            transform: scale(1) translateY(0);
-    -webkit-transform-origin: 50% 84%;
-            transform-origin: 50% 84%;
-  }
+    transform: scale(1) translateY(0);
+    transform-origin: 50% 84%; }
   100% {
-    -webkit-transform: scale(1.25) translateY(15px);
-            transform: scale(1.25) translateY(15px);
-    -webkit-transform-origin: bottom;
-            transform-origin: bottom;
-  }
-}
+    transform: scale(1.25) translateY(15px);
+    transform-origin: bottom; } }
 
 @keyframes kenburns-bottom {
   0% {
-    -webkit-transform: scale(1) translateY(0);
-            transform: scale(1) translateY(0);
-    -webkit-transform-origin: 50% 84%;
-            transform-origin: 50% 84%;
-  }
+    transform: scale(1) translateY(0);
+    transform-origin: 50% 84%; }
   100% {
-    -webkit-transform: scale(1.25) translateY(15px);
-            transform: scale(1.25) translateY(15px);
-    -webkit-transform-origin: bottom;
-            transform-origin: bottom;
-  }
-}
+    transform: scale(1.25) translateY(15px);
+    transform-origin: bottom; } }
 
 /**
  * ----------------------------------------
@@ -175,28 +111,23 @@
  */
 * {
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 /*** Remove focus for button, input, select, a ***/
 button:focus, button:focus-visible, input:focus, input:focus-visible, select:focus, select:focus-visible, a:focus, a:focus-visible {
   outline: none !important;
-  -webkit-box-shadow: none !important;
-          box-shadow: none !important;
-}
+  box-shadow: none !important; }
 
 /*** Hide Arrows From Input Number ***/
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
-  margin: 0;
-}
+  margin: 0; }
 
 /* Firefox */
 input[type=number] {
-  -moz-appearance: textfield;
-}
+  -moz-appearance: textfield; }
 
 /**
  * ----------------------------------------
@@ -211,22 +142,18 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: #13151e;
   scrollbar-width: thin;
-  scrollbar-color: #D91A2A #a00000;
-}
+  scrollbar-color: #D91A2A #a00000; }
 
 body::-webkit-scrollbar {
-  width: 8px;
-}
+  width: 8px; }
 
 body::-webkit-scrollbar-track {
-  background: #13151e;
-}
+  background: #13151e; }
 
 body::-webkit-scrollbar-thumb {
   background-color: #D91A2A;
   border-radius: 6px;
-  border: 3px solid #a00000;
-}
+  border: 3px solid #a00000; }
 
 /**
  * ----------------------------------------
@@ -234,12 +161,10 @@ body::-webkit-scrollbar-thumb {
  * ----------------------------------------
  */
 .colorPink {
-  color: #D91A2A;
-}
+  color: #D91A2A; }
 
 .colorWhite {
-  color: #FAFAFA;
-}
+  color: #FAFAFA; }
 
 /**
  * ----------------------------------------
@@ -247,12 +172,10 @@ body::-webkit-scrollbar-thumb {
  * ----------------------------------------
  */
 .bg-red {
-  background-color: #D91A2A;
-}
+  background-color: #D91A2A; }
 
 .bg-black {
-  background-color: #13151e;
-}
+  background-color: #13151e; }
 
 /**
  * ----------------------------------------
@@ -262,33 +185,27 @@ body::-webkit-scrollbar-thumb {
 /**** FONTS ROBOTO *****/
 .roboto-thin {
   font-family: "Roboto", sans-serif;
-  font-weight: 100;
-}
+  font-weight: 100; }
 
 .roboto-light {
   font-family: "Roboto", sans-serif;
-  font-weight: 300;
-}
+  font-weight: 300; }
 
 .roboto-regular {
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
-}
+  font-weight: 400; }
 
 .roboto-medium {
   font-family: "Roboto", sans-serif;
-  font-weight: 500;
-}
+  font-weight: 500; }
 
 .roboto-bold {
   font-family: "Roboto", sans-serif;
-  font-weight: 700;
-}
+  font-weight: 700; }
 
 .roboto-black {
   font-family: "Roboto", sans-serif;
-  font-weight: 900;
-}
+  font-weight: 900; }
 
 /**
  * ----------------------------------------
@@ -296,36 +213,30 @@ body::-webkit-scrollbar-thumb {
  * ----------------------------------------
  */
 .custom_cursor, .navbar-custom, .navbar-custom__brand.navbar-brand, .navbar-custom__brand .navbar-text, .navbar-custom__link--colorGold .nav-item.active .nav-link, .navbar-custom__link--colorGold .nav-item:focus .nav-link, .navbar-custom__link--colorGold .nav-item:hover .nav-link {
-  cursor: url(../assets/icons/cursor.png), auto;
-}
+  cursor: url(../assets/icons/cursor.png), auto; }
 
 /* Change background color */
 .navbar-custom {
   background-color: #13151e;
   color: #FAFAFA;
-  font-family: "Roboto", sans-serif;
-}
+  font-family: "Roboto", sans-serif; }
 
 /* Change the brand and text color */
 .navbar-custom__brand.navbar-brand, .navbar-custom__brand .navbar-text {
-  color: #FAFAFA;
-}
+  color: #FAFAFA; }
 
 /* Change the link color */
 .navbar-custom__link .navbar-nav .nav-link {
   color: #FAFAFA;
-  font-size: 1.2rem;
-}
+  font-size: 1.2rem; }
 
 /* Change the color of active or hovered links */
 .navbar-custom__link--colorGold .nav-item.active .nav-link, .navbar-custom__link--colorGold .nav-item:focus .nav-link, .navbar-custom__link--colorGold .nav-item:hover .nav-link {
-  color: #dfc298;
-}
+  color: #dfc298; }
 
 /* Change the color of toogler */
 .navbar-custom__toogler.navbar-toggler i {
-  color: #dfc298;
-}
+  color: #dfc298; }
 
 /**
  * ----------------------------------------
@@ -337,18 +248,15 @@ body::-webkit-scrollbar-thumb {
   background-color: #13151e;
   color: #D91A2A;
   width: 100%;
-  overflow: hidden;
-}
+  overflow: hidden; }
 
 .banner--img {
   height: 20vh;
-  min-height: 18rem;
-}
+  min-height: 18rem; }
 
 .banner--home {
   height: 100vh;
-  min-height: 25rem;
-}
+  min-height: 25rem; }
 
 .banner__img {
   position: absolute;
@@ -356,27 +264,17 @@ body::-webkit-scrollbar-thumb {
   min-height: 100%;
   width: auto;
   height: auto;
-  z-index: 0;
-}
+  z-index: 0; }
 
 .banner__container {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 100%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
   text-align: center;
-  z-index: 2;
-}
+  z-index: 2; }
 
 .banner__overlay {
   position: absolute;
@@ -386,20 +284,16 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   background-color: black;
   opacity: 0.3;
-  z-index: 1;
-}
+  z-index: 1; }
 
 .banner__overlay--medium {
-  opacity: 0.5;
-}
+  opacity: 0.5; }
 
 .banner__overlay--soft {
-  opacity: 0.2;
-}
+  opacity: 0.2; }
 
 .banner__overlay--hard {
-  opacity: 0.7;
-}
+  opacity: 0.7; }
 
 /**
  * ----------------------------------------
@@ -411,27 +305,21 @@ body::-webkit-scrollbar-thumb {
     background-image: url("../assets/img/banner-bgImage-extra-small.jpg");
     background-size: cover;
     background-position: top;
-    background-repeat: no-repeat;
-  }
-}
+    background-repeat: no-repeat; } }
 
 @media all and (min-width: 768px) {
   .backgroundBanner {
     background-image: url("../assets/img/banner-bgImage-medium.jpg");
     background-size: cover;
     background-position: top;
-    background-repeat: no-repeat;
-  }
-}
+    background-repeat: no-repeat; } }
 
 @media all and (min-width: 1024px) {
   .backgroundBanner {
     background-image: url("../assets/img/banner-bgImage-large.jpg");
     background-size: cover;
     background-position: top;
-    background-repeat: no-repeat;
-  }
-}
+    background-repeat: no-repeat; } }
 
 /**
  * ----------------------------------------
@@ -441,15 +329,10 @@ body::-webkit-scrollbar-thumb {
 /****  Prevents the carddeck from splitting into 2 lines ****/
 @media all and (max-width: 906px) {
   #cardDeckMQ .card-deck {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  #cardDeckMQ .card-deck .card {
-    min-width: 17rem;
-    max-width: 26rem;
-  }
-}
+    justify-content: center; }
+    #cardDeckMQ .card-deck .card {
+      min-width: 17rem;
+      max-width: 26rem; } }
 
 /**
  * ----------------------------------------
@@ -462,15 +345,13 @@ body::-webkit-scrollbar-thumb {
   height: 100%;
   z-index: 2;
   background-color: #080d15;
-  opacity: .3;
-}
+  opacity: .3; }
 
 .logoHome {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 3;
-}
+  z-index: 3; }
 
 .card-link {
   font-size: 1.3rem;
@@ -478,23 +359,17 @@ body::-webkit-scrollbar-thumb {
   font-weight: 600;
   font-style: italic;
   border: 2px solid #D91A2A;
-  text-align: center;
-}
-
-.card-link a {
-  text-decoration: none;
-  color: #FAFAFA;
-}
-
-.card-link a:hover {
-  color: #dfc298;
-  border-color: #D91A2A;
-}
+  text-align: center; }
+  .card-link a {
+    text-decoration: none;
+    color: #FAFAFA; }
+    .card-link a:hover {
+      color: #dfc298;
+      border-color: #D91A2A; }
 
 .card-size {
   min-width: 12rem;
-  max-width: 16rem;
-}
+  max-width: 16rem; }
 
 /**
  * ----------------------------------------
@@ -506,34 +381,24 @@ body::-webkit-scrollbar-thumb {
   background-color: #13151e;
   margin-top: 2rem;
   margin-bottom: 2rem;
-  text-align: center;
-}
+  text-align: center; }
 
 .menu__title {
-  font-weight: 700;
-}
+  font-weight: 700; }
 
 .menu__description {
-  font-family: "Roboto", sans-serif;
-}
+  font-family: "Roboto", sans-serif; }
 
 .menu--size {
   min-width: 12rem;
-  max-width: 16rem;
-}
+  max-width: 16rem; }
 
 .menu--scale img {
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  -webkit-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out;
-}
-
-.menu--scale img:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
-  z-index: 100;
-}
+  transform: scale(1);
+  transition: all 300ms ease-in-out; }
+  .menu--scale img:hover {
+    transform: scale(1.05);
+    z-index: 100; }
 
 /**
  * ----------------------------------------
@@ -544,18 +409,15 @@ body::-webkit-scrollbar-thumb {
   background-color: #13151e;
   color: #FAFAFA;
   font-size: 1.3rem;
-  font-family: "Roboto", sans-serif;
-}
+  font-family: "Roboto", sans-serif; }
 
 .event__title {
   font-size: 1.8rem;
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
-}
+  font-weight: 400; }
 
 .event__info {
-  font-size: 1rem;
-}
+  font-size: 1rem; }
 
 .event__date {
   min-width: 15rem;
@@ -565,22 +427,15 @@ body::-webkit-scrollbar-thumb {
   font-weight: 600;
   font-style: italic;
   border: 2px solid #D91A2A;
-  text-align: center;
-}
-
-.event__date a {
-  text-decoration: none;
-  color: #FAFAFA;
-}
-
-.event__date a:hover {
-  color: #dfc298;
-  border-color: #D91A2A;
-}
-
-.event__date i {
-  padding: 0 0.2em;
-}
+  text-align: center; }
+  .event__date a {
+    text-decoration: none;
+    color: #FAFAFA; }
+    .event__date a:hover {
+      color: #dfc298;
+      border-color: #D91A2A; }
+  .event__date i {
+    padding: 0 0.2em; }
 
 /**
  * ----------------------------------------
@@ -589,9 +444,7 @@ body::-webkit-scrollbar-thumb {
  */
 /**** Rotate the close button of the modal ****/
 .rt90 i:hover {
-  -webkit-animation: rotate-90 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-          animation: rotate-90 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-}
+  animation: rotate-90 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
 
 /**
  * ----------------------------------------
@@ -601,60 +454,41 @@ body::-webkit-scrollbar-thumb {
 .footer {
   font-family: "Roboto", sans-serif;
   background-color: #13151e;
-  color: #FAFAFA;
-}
-
-.footer p {
-  margin: 0;
-  padding: 0;
-}
+  color: #FAFAFA; }
+  .footer p {
+    margin: 0;
+    padding: 0; }
 
 .footer__schedule {
-  background-color: #a00000;
-}
+  background-color: #a00000; }
 
 .footer__socialMedia {
   background-color: #a00000;
-  color: #FAFAFA;
-}
-
-.footer__socialMedia a {
-  color: #FAFAFA;
-}
-
-.footer__socialMedia a:hover {
-  color: #dfc298;
-}
+  color: #FAFAFA; }
+  .footer__socialMedia a {
+    color: #FAFAFA; }
+    .footer__socialMedia a:hover {
+      color: #dfc298; }
 
 .footer__address {
   background-color: #a00000;
   color: #FAFAFA;
-  font-size: 1rem;
-}
+  font-size: 1rem; }
 
 .footer__goUp {
-  background-color: #13151e;
-}
-
-.footer__goUp a {
-  color: #FAFAFA;
-}
-
-.footer__goUp a:hover {
-  color: #dfc298;
-}
-
-.footer__goUp p {
-  font-size: 0.6rem;
-}
+  background-color: #13151e; }
+  .footer__goUp a {
+    color: #FAFAFA; }
+    .footer__goUp a:hover {
+      color: #dfc298; }
+  .footer__goUp p {
+    font-size: 0.6rem; }
 
 .footer--bgDark {
-  background-color: #13151e;
-}
+  background-color: #13151e; }
 
 .footer--bgGray {
-  background-color: #a00000;
-}
+  background-color: #a00000; }
 
 /**
  * ----------------------------------------
@@ -670,18 +504,15 @@ body::-webkit-scrollbar-thumb {
   display: inline-block;
   font-size: 1rem;
   margin: 2px 1px;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .button--hover:hover {
-  border: 2px solid #a00000;
-}
+  border: 2px solid #a00000; }
 
 .button--theme-purple {
   background: #D91A2A;
   border-radius: 10px 10px 10px 10px;
-  border: 2px solid transparent;
-}
+  border: 2px solid transparent; }
 
 /**
  * ----------------------------------------
@@ -691,7 +522,4 @@ body::-webkit-scrollbar-thumb {
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before {
   background-color: #D91A2A;
   border-color: #D91A2A;
-  -webkit-box-shadow: none !important;
-          box-shadow: none !important;
-}
-/*# sourceMappingURL=style.css.map */
+  box-shadow: none !important; }
